# 2024_AWS

./: .gitignore  Case-qit Python File.ipynb  QuCloud_InvList.ipynb  README.md  SimulationSetup.ipynb  Untitled.ipynb  Untitled1.ipynb  candidate_pair.json  candidate_pair_to_json.py  compiler.py  deep_cnot_circuit.py  deep_qft.py  demo1.py  demo2.py  demo3.py  noise_model.py  noise_suite.ipynb  parser_test.py  postfailure.ipynb  pyproject.toml
.ipynb_checkpoints/: QuCloud_InvList-checkpoint.ipynb  SimulationSetup-checkpoint.ipynb
Brown_Quantum_Initiative/: deep_cnot_circuit.py  edge_coloring.py  mapping.py  pyproject.toml
Brown_Quantum_Initiative/circuits/: __init__.py  cnot_only_circuits.py  qft.py
Brown_Quantum_Initiative/qbraid_job_submission/: ionqnativecircuit.py
demo/: demo1.py
examples/: 2_Running_quantum_circuits_on_QPU_devices.ipynb  Simulating_Noise_On_Amazon_Braket.ipynb
icuhack/: circuit.py  lexer.py  parser.py  qasm_rewrites.py  qubit_placement.py  zxcalc.py
test/: parser_test.py
