[tool.poetry]
name = "icuhack"
version = "0.1.0"
description = "Our Submission for the AWS noise-aware compilation challenge"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyzx = "0.7.3"
amazon-braket-sdk = "1.68.2"
egglog = "1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
